--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "example": "ng build",
+    "postinstall": "ng build --aot -prod",
     "start": "ng build --prod && node ./server/server.js",
     "build": "ng build",
     "test": "ng test",
