--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "ngx-cookie-service": "^11.0.2",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "cors": "^2.8.5"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.4",
